Fixed contact icon spacing

--- a/main.css
+++ b/main.css
@@ -75,7 +75,7 @@ div.background {
     line-height: 0;
     font-family: 'Work Sans', sans-serif;
     font-size: 100px;
-    padding-bottom: 25vh;
+    padding-bottom: 20vh;
     text-align: center;
     color: #EC576B;
 }
